Fix for alignment issue in Bills page

--- a/src/Components/Bills/Bills.css
+++ b/src/Components/Bills/Bills.css
@@ -34,3 +34,6 @@
 .indFoodItem{
     @apply flex 
 }
+.foodItemName{
+    @apply w-28 overflow-ellipsis
+}
